# robotics_cpp

./: .gitignore  README.md
_doc/: optimizer.md
_projects/_paper_mobile_manipulator/: CMakeLists.txt  paper_mm_simple.cpp
_projects/_paper_mobile_manipulator/config/: simple_plan.yaml
_projects/_paper_mobile_manipulator/scripts/: joint_plot.py
_projects/_paper_torus/: CMakeLists.txt
_projects/_paper_torus/config/: paper_r2s.yaml  paper_r2s_constrained.yaml  paper_r2s_extsgoalset.yaml  paper_r2s_prm_build.yaml  paper_r6s.yaml  paper_r6s_constrained.yaml  paper_so2s.yaml  r2s_altgoal.yaml  r2s_cartgoal.yaml  r2s_prm.yaml  r2s_snggoal.yaml  r6s_altgoal.yaml  r6s_cartgoal.yaml  r6s_snggoal.yaml  so2s_snggoal.yaml
_projects/_paper_torus/scripts/: joint_plot.py  paper_r2s_constrained_plot.py  paper_r2s_extsgoalset_plot.py  paper_r2s_plot.py  paper_r2s_prm_build_plot.py  paper_r6s_plot.py  paper_so2s_plot.py  plot_joint_times.py  plot_r2s.py  plot_r6s.py  plot_so2s.py  plot_torus_physical_limit.py  plot_ur5e.py  plot_ur5e_bullet.py  plot_ur5e_pino.py  r2s_prm.py  rnd_graph_mip.py  rnd_graph_plot.py  rnd_gtsp.py  rnd_r2s_prm.py  rnd_task_map.py  rnd_theory_check.py  rnd_tsm.py  rnd_tsp.py  rnd_tsp_nn.py  robotsp_dijkstra_solver.py  robotsp_ur5e_main.py  util.py
_projects/_paper_torus/sketch/: iksample.py  jacobiansym.py  tasks_process.py  theory_check.py  tsm_solver.py
_projects/_paper_torus/src/: r2s_altgoal.cpp  r2s_cartgoal.cpp  r2s_prm.cpp  r2s_snggoal.cpp  r6s_altgoal.cpp  r6s_cartgoal.cpp  r6s_cartgoal_tsrrt.cpp  r6s_snggoal.cpp  so2s_snggoal.cpp
_projects/_paper_torus/test/: bindpy.cpp  bindpy.py  pintest.py
learning/cuda/: addint.cu  hello.cu
learning/torch/: CMakeLists.txt  main.cpp  network.h  network.py
optimization/: CMakeLists.txt  nlopt_example.cpp  nlopt_shooting_diffdrive.cpp
optimization/scripts/: shooting_diffdrive.py
physics/: CMakeLists.txt  CMakeLists_bullet.txt  bulletex.cpp  hello.cpp  hello_fcl.cpp
planner/sampling_based_ompl/: CMakeLists.txt  test_r2s_prm.cpp  test_r2s_rrt.cpp  test_r6s_rrtstar.cpp  test_so2.cpp
planner/sampling_based_ompl/scripts/: test_r2s_prm.py
planner/stomp/: stomp.h  stomp_example.cpp  task.h  utils.cpp  utils.h
robot/: CMakeLists.txt
robot/example/: CMakeLists.txt  collision_use.cpp  mobile_diffdrive.cpp  mobile_diffdrive_pointer.cpp  nonmobile_planar_rr_use.cpp  sim_planar_rr_use.cpp
robot/include/: collision.h  mobile_diffdrive.h  nonmobile_planar_6r.h  nonmobile_planar_rr.h  nonmobile_planar_rrr.h  sim_planar_6r.h  sim_planar_rr.h  sim_planar_rrr.h
robot/src/: collision.cpp  mobile_diffdrive.cpp  nonmobile_planar_6r.cpp  nonmobile_planar_rr.cpp  nonmobile_planar_rrr.cpp  sim_planar_6r.cpp  sim_planar_rr.cpp  sim_planar_rrr.cpp
spatial_geometry/: CMakeLists.txt
spatial_geometry/example/: CMakeLists.txt  findaltconfig_use.cpp  shape_use.cpp  spatial_transformation_use.cpp
spatial_geometry/include/: findaltconfig.h  shape.h  spatial_transformation.h
spatial_geometry/src/: findaltconfig.cpp  shape.cpp  spatial_transformation.cpp
stomp/: CMakeLists.txt  simple_optimization_task.h  stomp.cpp
vision/: CMakeLists.txt  display_cam.cpp  display_image.cpp  draw_obj.cpp  ocv_gpu.cpp
xtras/: CMakeLists.txt  basic_eigen.cpp
